--- a/html.html
+++ b/html.html
@@ -5,7 +5,7 @@
 
     <title>TAB Title</title>
 
-    <meta name="author" content="Mark Mercer">
+    <meta name="author" content="dredlock123">
     <meta name="description" content=""> <!-- Webpage Description -->
     <meta name="keywords" content=""> <!-- Key Words for conducting searches in Search Engines -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
