--- a/childpages/childT.html
+++ b/childpages/childT.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
   <head>
@@ -5,22 +6,22 @@
 
     <title>YOU HAVE WON!!!</title>
 
-    <meta name="author" content="raymond runcer">
-    <meta name="description" content=""> <!-- Webpage Description -->
-    <meta name="keywords" content=""> <!-- Key Words for conducting searches in Search Engines -->
+    <meta name="author" content="Mark Mercer">
+    <meta name="description" content="bruh"> <!-- Webpage Description -->
+    <meta name="keywords" content="you have one a free iphone"> <!-- Key Words for conducting searches in Search Engines -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   </head>
 
   <body>
-<p>open in atom to see meta data changes :/<p/>
+
     <header><h1>Header Title</h1></header>
     <nav><h2>Navigation Menu</h2></nav>
     <aside><p>The Aside Space</p></aside>
     <section>
       <h3>Section 1</h3>
       <article>
-
+        <p>This is article 1 in section 1.</p>
       </article>
       <article>
         <p>This is article 2 in section 1.</p>
@@ -35,14 +36,6 @@
         <p>This is article 2 in section 2.</p>
       </article>
     </section>
-
-
-    <audio controls>
-      <source src="" type="audio/ogg">
-      <source src="" type="audio/mpeg">
-      Your browser does not support the audio tag.
-    </audio>
-
 
   </body>
 
