--- a/childpages/childT.html
+++ b/childpages/childT.html
@@ -15,7 +15,7 @@
 
   <body>
 
-    <header><h1>YOU HAVE WON A FREE IPHONE X JUST COMPLETE THIS SURVEY</h1></header>
+    <header><h1>YOU HAVE WON A FREE IPHONE 11 JUST COMPLETE THIS SURVEY</h1></header>
     <nav><h2>Navigation Menu</h2></nav>
     <aside><p>The Aside Space</p></aside>
     <section>
