--- a/childpages/childT.html
+++ b/childpages/childT.html
@@ -40,7 +40,11 @@
   </body>
 
   <footer>
+<blockquote>
 
+<p>Tomorrow can motivate you to get into heaven.</p>
+
+</blockquote>
     <p>&copy Mark Mercer, powered by A GUY in GitHub</p>
 
   </footer>
