--- a/childpages/childT.html
+++ b/childpages/childT.html
@@ -42,7 +42,7 @@
   <footer>
 <blockquote>
 
-<p>Tomorrow can motivate you to get into heaven.</p>
+<p>Tomorrow can motivate you to get into heaven.  (inspirobot.me) </p>
 
 </blockquote>
     <p>&copy Mark Mercer, powered by A GUY in GitHub</p>
