--- a/childpages/childT.html
+++ b/childpages/childT.html
@@ -42,8 +42,8 @@
   <footer>
 <blockquote>
 
-<p>Tomorrow can motivate you to get into heaven.  (inspirobot.me) </p>
-<p> An erection can change earthlings.   (inspirobot.me)</p>
+<p><<strong>Tomorrow can motivate you to get into heaven.</strong>  (inspirobot.me) </p>
+<p><<strong> An erection can change earthlings.</strong>   (inspirobot.me)</p>
 </blockquote>
     <p>&copy Mark Mercer, powered by A GUY in GitHub</p>
 
