--- a/html.html
+++ b/html.html
@@ -6,7 +6,7 @@
     <title>YOU HAVE WON!!!</title>
 
     <meta name="author" content="raymond runcer">
-    <meta name="description" content=""> <!-- Webpage Description -->
+    <meta name="description" content="this is a thing"> <!-- Webpage Description -->
     <meta name="keywords" content=""> <!-- Key Words for conducting searches in Search Engines -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -42,7 +42,7 @@
   </body>
 
   <footer>
-
+<blockquote> eggs and beans <blockquote>
     <p>&copy Mark Mercer, powered by MercersKitchen in GitHub</p>
 
   </footer>
