--- a/html.html
+++ b/html.html
@@ -35,7 +35,14 @@
         <p>This is article 2 in section 2.</p>
       </article>
     </section>
-
+<nav><h3>This is the NAV Menu</h3>
+  <!-- This used to be P-Tags before the List Lesson-->
+  <ol type="A">
+    <li> Meta Data Example: <a href="childPages/MetaData.html" target="_blank">Open this in ATOM to see meta data changes :)</a>
+    <li> Footer Blockquote Example: <a href="childPages/FooterBlockQuote.html" target="_blank">click here</a>
+    <li> Headings and Paragraph Tags: <a href="childPages/Headings and Paragraph Tags.html" target="_blank">click here</a>
+    <li> Subscript and Superscript Tags: <a href="childPages/Sub and Super Script Tags.html" target="_blank">click here</a>
+  </ol><nav>
 
 
 
